2013-11-18  Basic  <simsong@Mucha.local>

	* src/wifipcap/wifipcap.cpp (WifipcapCallbacks::decode_data_frame): now calls Handle80211Data() for all data packets

	* configure.ac: changes to test per Ryan Schmidt <notifications@github.com>

2013-11-17  Basic  <simsong@Mucha.local>

	* configure.ac: updated to 1.4.2

	* src/be13_api/be13_configure.m4: fixed so that it still compiles on MacOS 10.8.

2013-11-15  Basic  <simsong@Mucha.local>

	* src/datalink.cpp (dl_null): removed DLT_NULL_BROKEN; it's not needed anymore.

2013-10-21  Man Page  <simsong@mncrnpsedu.local>

	* src/flow.cpp (flow::filename): Since some people don't understand what %c and %C do, they don't provide it. It is required, so now a %c is appended if it is not specified.

2013-06-11  Basic  <simsong@Mucha.local>

	* doc/tcpflow.1.in (std): removed explaination of filtering expressions

2013-05-26  Basic  <simsong@Mucha.local>

	* src/tcpip.cpp (tcpip::print_packet): implemented hex dump

	* src/scan_netviz.cpp (scan_netviz): disabled by default for now.

	* src/tcpip.cpp (tcpip::print_packet): now prints 'filename' with console output (wasn't working due to bug).

2013-04-17  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* src/iptree.h (template): changed inc() to add()
2013-04-16  Simson Garfinkel  <simsong@Mucha.local>

	* src/iptree.h: changed 'trim' to 'prune' for correct terminology.

2013-03-30  Simson Garfinkel  <simsong@Mucha.local>

	* src/scan_tcpdemux.cpp (scan_tcpdemux): added -S tcp_timeout 

2013-03-03  Simson Garfinkel  <simsong@Mucha.local>

	* src/scan_netviz.cpp (scan_netviz): scan_netviz enabled by default

2013-02-27  Simson Garfinkel  <simsong@Mucha.local>

	* configure.ac: added /usr/boost/include to search path

2013-01-27  Simson Garfinkel  <simsong@FC17>

	* src/tcpdemux.cpp (close_all_fd): now calls close_file(false), to preven openflows from being modified while it is being iterated.

	* src/tcpflow.h: removed SET_BIT as it wasn't being used
